updated javascript timer logic

--- a/reminders/templates/dashboard.html
+++ b/reminders/templates/dashboard.html
@@ -57,6 +57,7 @@
                         <select id="timerUnit" name="timerUnit">
                             <option value="minutes">Minutes</option>
                             <option value="seconds">Seconds</option>
+                            <optin value="hours">Hours</optin>
                         </select>
                     </div>
                 </div>
